router config added

--- a/src/main-web/app/app.html
+++ b/src/main-web/app/app.html
@@ -4,11 +4,10 @@
   </header>
   <nav class="nav">
     <ul>
-      <li><a href="/experiments" [routerLink]="['/experiments']">EXPERIMENTS</a></li>
+      <li><a href="/experiment" [routerLink]="['/experiment']" routerLinkActive="active">EXPERIMENTS</a></li>
     </ul>
   </nav>
   <main class="main">
-    MAIN
     <router-outlet></router-outlet>
   </main>
   <footer class="footer">
