--- a/src/main-web/app/experiment/grid/grid.html
+++ b/src/main-web/app/experiment/grid/grid.html
@@ -20,7 +20,8 @@
 <section>
   <p class="hey">Well, here's my first lab session. Nothing fancy, but pretty cool, simple and practical stuff.</p>
   <p>What I really wanted to try after knowing Flexbox is, the pinterest-like image layout.</p>
-  <p>Laying different size of images may not relevant to Flexbox, but the focus is on fitting split image sections into
+  <p>Laying different size of images may not be relevant to Flexbox, but the focus is on fitting split image sections
+    into
     a single line.</p>
   <p>Let's just cut to the chase. All you need to do is writting flex display in a section wrapping images</p>
 
@@ -28,7 +29,7 @@
    {{'.snap-section { display: flex; }'}}
   </code></pre>
 
-  <p>Then, you will get image sections fitted in a signle line, but it doesn't look good in a mobile display. So you
+  <p>Then, you will get image sections fitted in a single line, but it doesn't look good in a mobile display. So you
     will write one more code line.</p>
   <pre><code class="css hljs">
    {{
@@ -39,5 +40,6 @@
   </code></pre>
 
   <p>Flex-flow will sets a direction and decision of being layed out in a single line or multiple lines.</p>
-  <p>The code above sets multiple line to row direction, so images will be moved down when the image size cannot be fitted in.</p>
+  <p>The code above sets multiple line to row direction, so images will be moved down when the image size cannot be
+    fitted in.</p>
 </section>
