--- a/src/main-web/app/app.html
+++ b/src/main-web/app/app.html
@@ -1,3 +1,10 @@
+<div>
+  <button (click)="increase()">Increment</button>
+  <div>Current Count: {{ counter | async }}</div>
+  <button (click)="decrease()">Decrement</button>
+
+  <button (click)="reset(3)">Reset Counter</button>
+</div>
 <div class="container">
   <header class="header">
     <h1><a href="/" [routerLink]="['/']">JazzyRedfaces' Lab Session</a></h1>
