--- a/src/main-web/app/experiment/experiment-list/experiment-list.html
+++ b/src/main-web/app/experiment/experiment-list/experiment-list.html
@@ -3,6 +3,9 @@
     <a href="grid" [routerLink]="['grid']">ZIGZAG GRID</a>
   </article>
   <article>
+    <a href="ngrx" [routerLink]="['ngrx']">NGRX</a>
+  </article>
+  <article>
     <a href="eventsource" [routerLink]="['eventsource']">Realtime streaming with EventSource</a>
   </article>
   <article>
