replaced home with about

--- a/src/main-web/app/app.html
+++ b/src/main-web/app/app.html
@@ -4,7 +4,8 @@
   </header>
   <nav class="nav">
     <ul>
-      <li><a href="/experiment" [routerLink]="['/experiment']" routerLinkActive="active">EXPERIMENTS</a></li>
+      <li><a href="experiment" [routerLink]="['experiment']" routerLinkActive="active">EXPERIMENTS</a></li>
+      <li><a href="about" [routerLink]="['about']" routerLinkActive="active">ABOUT</a></li>
     </ul>
   </nav>
   <main class="main">
